--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "python.languageServer": "Pylance",
-    "python.analysis.typeCheckingMode": "standard"
+    "python.analysis.typeCheckingMode": "strict"
 }
